# DGGML

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/CMA/: CMakeLists.txt  configuration_file_generator.cpp  cross_compare.json  mt_dgg_simulator.cpp  settings.json
examples/CMA/PlantModel/: Parameters.hpp  PlantGrammar.hpp  PlantModel.hpp  PlantSSA.hpp  PlantTypes.hpp  PlantUtils.hpp  cmaModel.h  cmaRules.hpp
examples/Particle/: CMakeLists.txt  particle_settings.json  particle_simulator.cpp
examples/Particle/ParticleModel/: ParticleTypes.hpp  ParticleUtils.hpp  particleModel.h
scripts/: builder.sh
simulators/: CMakeLists.txt  mt_dgg_simulator.cpp  parallel_run.sh  quick_vis.sh  settings.json
src/: ApproximateSSA.hpp  Binner.hpp  CMakeLists.txt  CajeteConfig.hpp  CajeteConfig.hpp.in  CellList.hpp  ComponentMap.hpp  ComponentMatchMap.hpp  DGGML.h  DGGMLConfig.hpp  DGGMLConfig.hpp.in  DggFactory.hpp  DggModel.hpp  FileWriter.hpp  Histobucket.hpp  IncrementalUpdate.hpp  MathUtils.hpp  MemoryManager.hpp  Model.h  PlantModel.hpp  RuleMatchMap.hpp  RuleSystem.hpp  SimpleGraph.hpp  SimulationRunner.h  SimulatorInterface.h  SpatialData3D.hpp  Types.hpp  VerletList.hpp  VtkWriter.hpp  pattern_matching.hpp  phi_functions.hpp
src/CellComplexes/: BrickComplex2D.hpp  CartesianComplex2D.hpp  CellComplex.hpp  CellComplexTypes.hpp  ExpandedComplex2D.hpp
src/CellComplexes/Utils/: CartesianHashFunctions.hpp
src/Grammar/: AnalyzedGrammar.hpp  Grammar.h
src/Grids/: BrickGrid2D.hpp  CartesianGrid2D.hpp
src/PlantModel/: PlantGrammar.hpp  PlantModel.hpp  PlantSSA.hpp  PlantTypes.hpp  PlantUtils.hpp  VtkWriter.hpp
src/Solvers/: Solver.h  SundialsUtils.hpp
src/Utlities/: HelperFunctions.hpp  HelperStructs.hpp  KeyGenerator.hpp  MathUtils.hpp  MemoryManager.hpp  RandomFunctions.hpp  VtkWriter.hpp
tests/: CMakeLists.txt  binning-and-sort-test.cpp  cell-list-test.cpp  cplex-test.cpp  factory-test.cpp  file-writer-test.cpp  grammar-test.cpp  graph-test.cpp  grid-test.cpp  incremental-updates-test.cpp  math-test.cpp  memory-manager-test.cpp  neighbor-list-test.cpp  phi-function-test.cpp  plant-matcher-test.cpp  settings.json  simple_test.cpp  sundials-test.cpp  tests_main.cpp
tools/: CMakeLists.txt
tools/vtuReader/: CMakeLists.txt  vtuReader.cxx
